--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       2014<br/>
       2013<br/>
       2013<br/>
+      <a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_05/MaxMSP.atSemibreve.2013.zip">Max MSP @ Semibreve_Joao Menezes</a>
+       <a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_04/No.More.Vjing_Processing.Workshop.2013.zip">No More Vjing_Diogo Tudela</a>
       2012<br/>
+      <a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_03/MaxMSP.Jitter.Crash.Course.2012.zip">Max MSP_Joao Menezes</a>
       <a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_02/Processing.Crash.Course.2012.zip">Processing_Tiago Angelo</small></a>
       
       
