--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <a id="workshops--crash-courses" class="anchor" href="#workshops--crash-courses" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Workshops / Crash Courses</h1>
 
  <br/>
-      2016<br/>
-      2015<br/>
-      2014<br/>
-      2013<br/>
-      2013<br/>
+      <br/>2016
+      <br/>2015
+      <br/>2014
+      <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_06/Get.Parametrical.workshop.at.Code.Control.2013.zip">Get Parametrical @ Code Control_Joao Menezes</a>
+      <br/>2013
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_05/MaxMSP.atSemibreve.2013.zip">Max MSP @ Semibreve_Joao Menezes</a>
        <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_04/No.More.Vjing_Processing.Workshop.2013.zip">No More Vjing_Diogo Tudela</a>
-      2012<br/>
+      <br/>2012
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_03/MaxMSP.Jitter.Crash.Course.2012.zip">Max MSP_Joao Menezes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_02/Processing.Crash.Course.2012.zip">Processing_Tiago Angelo</small></a>
       
