--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
 <a id="workshops--crash-courses" class="anchor" href="#workshops--crash-courses" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Workshops / Crash Courses</h1>
 
  <br/>
-      <br/>2016
-      <br/>2015
-      <br/>2014
+      <br/>strong>2016</strong>
+      <br/><a href="
+      <br/><a href="
+      <br/>strong>2015</strong>
+      <br/><a href="
+      <br/><a href="
+      <br/>strong>2014</strong>
+      <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_09/Producao.Musical.Mistura.e.Masterizacao.25.Janeiro.zip">Mistura e Masterização_Pedro Augusto</a>
+     <br/>strong>2013</strong>
+      <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_08/Criacao.Apps.Musicais.23.24.Nov.2013.zip">Criação Apps Musicais_Oscar Rodrigues</a>
+      <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_07/Max.M4L.workshop.Aveiro.SaxFest.2013.zip">Max & Max 4 Live @ Aveiro Sax Fest_Joao Menezes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_06/Get.Parametrical.workshop.at.Code.Control.2013.zip">Get Parametrical @ Code Control_Joao Menezes</a>
-      <br/>2013
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_05/MaxMSP.atSemibreve.2013.zip">Max MSP @ Semibreve_Joao Menezes</a>
        <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_04/No.More.Vjing_Processing.Workshop.2013.zip">No More Vjing_Diogo Tudela</a>
-      <br/>2012
+      <br/>strong>2012</strong>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_03/MaxMSP.Jitter.Crash.Course.2012.zip">Max MSP_Joao Menezes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_02/Processing.Crash.Course.2012.zip">Processing_Tiago Angelo</small></a>
       
