--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <br/><a href="
       <br/><a href="
       <br/><strong>2014</strong>
+      <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_11/AUDIO.DIGITAL.MIDI.pdf.zip">Audio Digital & MIDI_José Alberto Gomes</a>
+      <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_10/LIVE.MAX.FOR.LIVE_CdM2014.zip">Live & Max 4 Live_Tiago Angelo</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_09/Producao.Musical.Mistura.e.Masterizacao.25.Janeiro.zip">Mistura e Masterização_Pedro Augusto</a>
      <br/><strong>2013</strong>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_08/Criacao.Apps.Musicais.23.24.Nov.2013.zip">Criação Apps Musicais_Oscar Rodrigues</a>
@@ -42,7 +44,8 @@
       <br/><strong>2012</strong>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_03/MaxMSP.Jitter.Crash.Course.2012.zip">Max MSP_Joao Menezes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_02/Processing.Crash.Course.2012.zip">Processing_Tiago Angelo</small></a>
-      
+      <br/><strong>2011</strong>
+      <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_01/MaxMSPJitter.crash.course.2011.zip"> Max MSP / Jitter_Joao Menezes</a>
       
       </section>
       <footer>
