--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <br/><strong>2011</strong>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_01/MaxMSPJitter.crash.course.2011.zip"> Max MSP / Jitter_Joao Menezes</a>
       
+      <p><img src="https://raw.githubusercontent.com/Digitopia/Tuttifonia/dbce3e65eab013dac00ec7ffa19320a1632bc2b3/docs/pics/CdM_Digitopia-01.png" alt="image"></p>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/Digitopia">Digitopia</a></p>
