--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <br/>  <br/>
       <p><img src="https://raw.githubusercontent.com/Digitopia/Tuttifonia/dbce3e65eab013dac00ec7ffa19320a1632bc2b3/docs/pics/CdM_Digitopia-01.png" alt="image"></p>
 
+<br/><a data-flickr-embed="true"  href="https://www.flickr.com/photos/139548778@N03/albums/72157666155828471" title="Workshops/Crash Courses"><img src="https://farm2.staticflickr.com/1674/25888682082_e422a8c2b2.jpg" width="500" height="280" alt="Workshops/Crash Courses"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/Digitopia">Digitopia</a></p>
