--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Workshops / Crash Courses by Digitopia</title>
+    <title> </title>
+<style>
+.titulos{font-size: 20px}
+</style>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -25,6 +28,7 @@
 <a id="workshops--crash-courses" class="anchor" href="#workshops--crash-courses" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Workshops / Crash Courses</h1>
 
  <br/>
+ <br/><h1 class="titulos">WORKSHOPS & CRASH COURSES</h1>
       <br/><strong>2014</strong>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_11/AUDIO.DIGITAL.MIDI.pdf.zip">Audio Digital & MIDI_José Alberto Gomes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_10/LIVE.MAX.FOR.LIVE_CdM2014.zip">Live & Max 4 Live_Tiago Angelo</a>
