--- a/index.html
+++ b/index.html
@@ -29,23 +29,21 @@
       </header>
       <section>
         <h3>
-
- <br/>
- <br/><h1 class="titulos">WORKSHOPS & CRASH COURSES</h1>
-      <br/><strong>2014</strong>
+<h1 class="titulos">WORKSHOPS & CRASH COURSES</h1>
+      <br/>2014
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_11/AUDIO.DIGITAL.MIDI.pdf.zip">Audio Digital & MIDI_José Alberto Gomes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_10/LIVE.MAX.FOR.LIVE_CdM2014.zip">Live & Max 4 Live_Tiago Angelo</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_09/Producao.Musical.Mistura.e.Masterizacao.25.Janeiro.zip">Mistura e Masterização_Pedro Augusto</a>
-     <br/><strong>2013</strong>
+     <br/>2013
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_08/Criacao.Apps.Musicais.23.24.Nov.2013.zip">Criação Apps Musicais_Oscar Rodrigues</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_07/Max.M4L.workshop.Aveiro.SaxFest.2013.zip">Max & Max 4 Live @ Aveiro Sax Fest_Joao Menezes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_06/Get.Parametrical.workshop.at.Code.Control.2013.zip">Get Parametrical @ Code Control_Joao Menezes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_05/MaxMSP.atSemibreve.2013.zip">Max MSP @ Semibreve_Joao Menezes</a>
        <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_04/No.More.Vjing_Processing.Workshop.2013.zip">No More Vjing_Diogo Tudela</a>
-      <br/><strong>2012</strong>
+      <br/>2012
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_03/MaxMSP.Jitter.Crash.Course.2012.zip">Max MSP_Joao Menezes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_02/Processing.Crash.Course.2012.zip">Processing_Tiago Angelo</small></a>
-      <br/><strong>2011</strong>
+      <br/>2011
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_01/MaxMSPJitter.crash.course.2011.zip"> Max MSP / Jitter_Joao Menezes</a>
         <br/>  <br/> 
         <br/><a data-flickr-embed="true"  href="https://www.flickr.com/photos/139548778@N03/albums/72157666155828471" title="Workshops/Crash Courses"><img src="https://farm2.staticflickr.com/1674/25888682082_e422a8c2b2.jpg" width="500" height="280" alt="Workshops/Crash Courses"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
