--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <section>
         <h3>
 <h1 class="titulos">WORKSHOPS & CRASH COURSES</h1>
+<br/>2016
+<br/><a href="http://digitopia.github.io/ws-openframeworks/">OpenFrameworks_Nuno Hespanhol</a>
       <br/>2014
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_11/AUDIO.DIGITAL.MIDI.pdf.zip">Audio Digital & MIDI_José Alberto Gomes</a>
       <br/><a href="https://github.com/Digitopia/Workshops-Crashcourses/releases/download/ws_10/LIVE.MAX.FOR.LIVE_CdM2014.zip">Live & Max 4 Live_Tiago Angelo</a>
