--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <section>
         <h3>
 <h1 class="titulos">WORKSHOPS & CRASH COURSES</h1>
+   <br/>2017
+       <br/> <a href="files.ruipenha.pt/workshop.zip">Interactive Music_Rui Penha</a>  
 <br/>2016
 <br/><a href="http://digitopia.github.io/ws-openframeworks/">OpenFrameworks_Nuno Hespanhol</a>
       <br/>2014
