--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <body>
     <div class="wrapper">
       <header>
+                <p><img src="https://github.com/Digitopia/digitopia.github.io/blob/master/Digitópia-Logo-10-Anos_cor900.png?raw=true" width="500" height="150"></p>
+
      
         <p>Conteúdos dos workshops e crashcourses Digitópia</p>
         <p>Contents of Digitópia's workshops and crashcourses</p>
