--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="wrapper">
       <header>
-                <p><img src="https://github.com/Digitopia/digitopia.github.io/blob/master/Digitópia-Logo-10-Anos_cor900.png?raw=true" width="500" height="150"></p>
+                <p><img src="https://github.com/Digitopia/digitopia.github.io/blob/master/Digitópia-Logo-10-Anos_cor900.png?raw=true"></p>
 
      
         <p>Conteúdos dos workshops e crashcourses Digitópia</p>
@@ -33,7 +33,8 @@
         <h3>
 <h1 class="titulos">WORKSHOPS & CRASH COURSES</h1>
    <br/>2017
-       <br/> <a href="http://files.ruipenha.pt/workshop.zip">Interactive Music_Rui Penha</a>  
+       <br/> <a href="http://files.ruipenha.pt/workshop.zip">Interactive Music_Rui Penha</a> 
+        <br/> <a href="http://www.gnration.pt/agenda/433#.WdJReRTSfe0">Circuit Bending_Pedro Augusto</a>   
 <br/>2016
 <br/><a href="http://digitopia.github.io/ws-openframeworks/">OpenFrameworks_Nuno Hespanhol</a>
       <br/>2014
