--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
 <h1 class="titulos">WORKSHOPS & CRASH COURSES</h1>
    <br/>2017
        <br/> <a href="http://files.ruipenha.pt/workshop.zip">Interactive Music_Rui Penha</a> 
-        <br/> <a href="http://www.gnration.pt/agenda/433#.WdJReRTSfe0">Circuit Bending_Pedro Augusto</a>   
+        <br/> <a href="http://www.gnration.pt/agenda/433#.WdJReRTSfe0">Circuit Bending_Pedro Augusto</a>  
+    <br/> <a href="http://www.casadamusica.com/pt/servico-educativo/formacao/2016-2017/formar-na-digitopia/?lang=pt">Radiesthetics Workshop_Dewi de Vree e Patrizia Ruthensteiner</a>  
+    <br/> <a href="http://www.casadamusica.com/pt/servico-educativo/formacao/2016-2017/formar-na-digitopia/?lang=pt">Interactive Music_Rui Penha</a>  
+    <br/> <a href="http://www.casadamusica.com/pt/servico-educativo/formacao/2016-2017/formar-na-digitopia/?lang=pt">Live Coding & Performance_Nuno Hespanhol e Oscar Rodrigues</a>  
+
+       <br/>upcoming <br/>
+          <br/> <a href="http://www.casadamusica.com/pt/servico-educativo/formacao/2016-2017/formar-na-digitopia/?lang=pt">Composing for the Eye and Ear_Pierce Warnecke</a>  
+       <br/> <a href="http://www.casadamusica.com/pt/servico-educativo/formacao/2016-2017/formar-na-digitopia/?lang=pt">Composing and Performing with Ableton Live_Joao Lobato and Tiago Angelo</a>  
+
 <br/>2016
 <br/><a href="http://digitopia.github.io/ws-openframeworks/">OpenFrameworks_Nuno Hespanhol</a>
       <br/>2014
